--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
                 <div class="signature">
                     Mãi yêu, ❤️<br>
-                    Người của anh/em
+                    Người mà em yêu
                 </div>
 
                 <span class="decorative-hearts bottom-left">💕</span>
