--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
 
                 <div class="signature">
                     Mãi yêu, ❤️<br>
-                    Người mà em yêu
+                    Người yêu của em
+                    #copy right of tienminh3027
                 </div>
 
                 <span class="decorative-hearts bottom-left">💕</span>
